welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:3: error: not found: type int
  var tab=new Array[int](1)
                    ^